# exemplo-cmake

./: .clang-format  CMakeLists.txt  LICENSE  README.md
source/: classSample.cpp  classSample.h  main.cpp
